# midimoose

./: CMakeLists.txt  LICENSE  README.md  build.sh  clock_divider.cpp  clock_divider.h  clock_output.cpp  clock_output.h  midifilter.ino  midimoose.ino  tests.cpp
hardware/: midimoose.pro  midimoose.sch
